# vimsicles

./: .clang-format.1  Plan.txt  README.md
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/com/example/vimsicles/: ExampleInstrumentedTest.kt  FileTransferServiceTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/example/vimsicles/: FileReceiveService.kt  FileTransferService.kt  MainActivity.kt  ReceiveActivity.kt  SendActivity.kt
Android/app/src/main/java/com/example/vimsicles/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/test/java/com/example/vimsicles/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Linux/: Makefile  creating_archive.sh  file_recieve  file_recieve.cpp  file_recieve_test  file_recieve_test.cpp  file_send  file_send.cpp  unarchiving.sh
Windows/: CMakeLists.txt  file_recieve.cpp  file_recieve_test.cpp  file_send.cpp
